--- a/changeLog
+++ b/changeLog
@@ -1,12 +1,14 @@
 Changelog for GEMC
 ==================
 
-
+2/7/16
+ - added cerenkov to the map of processes in the output
+ - better description for some true information variables
 
 2/2/16
-- making doxygen more happy
-- changing caching of the maps to 1 meter by default. This should be an option.
-- making step sizes explicit in field routine
+ - making doxygen more happy
+ - changing caching of the maps to 1 meter by default. This should be an option.
+ - making step sizes explicit in field routine
 
 2/1/16
  - Process names replaced with process ID in MHit. A map of names to process ID is in place and documented.
