--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,11 @@
 Changelog for GEMC
 ==================
 
+3/2/16
+ - removed CCGas from hardcoded cpp materials, added in ltcc system
+ - refurbished ltcc hit process routine. Added nphotonarrived variables as opposed to detected.
+ - minor improvements on htcc hit process routine
+
 3/1/16
  - added 100 segments lines per circle when inspecting a detector
  - fixed strip identification for bst routine
@@ -654,8 +659,59 @@ Changelog for GEMC
  - fixed length from trapezoid in ctof hit process
  - fixed length from trapezoid in ctof hit process
 
+3/5/2014
+ - fixed path for stdhep generator
+
 3/4/2014
  - fixed bug that caused gemc to ask for graphic display even in batch mode.
+
+3/3/2014
+ - Add colors for muons. Useful for a muon detector.
+ - Resurrect the StdHEP input file reader from GEMC 1.9
+ - Check for units.
+ - Check for correct data input size. This is critical, because additional values are added at the end.
+ - general improvements and fixes. Adding material mysql and text api
+ - Change to get_number: now takes extra, optional, option, warn_no_unit,
+   to make sure a unit is supplied. For numbers, we now check if the number
+   is valid and give a warning if there are unexpected characters.
+   This still does NOT detect ’12.+3.4’ type entries, because + and - are
+   valid number characters. In future, change to a regex parse.
+ - Very minor change: if a command line option is not recognized, continue anyway.
+   Mac OS adds a number of options to the command line that can cause GEMC to
+   quit without good reason, also, if you want to run the Xcode debugger.
+
+
+2/14/2014
+ - deleting text files only on first export
+ - static variable to print last geometry id only once. Now parameters, materials, bank and hit entries can be updated not just inserted
+ - scripts improvements. Material added in mysql db scheme
+
+2/12/2014
+ - Add the HPS hitprocess files
+ - Initial checkin of refactored HPS hit code
+ - fixed confusion between encrypt / decrypt
+ - added T/m unit.
+
+
+2/11/2014
+ - gbank and output factories improvements to make it more general.
+   options now accept a third argument <ignore> in case the library is
+   linked to another application accepting options in a different fashion
+
+
+2/4/2014
+ - adding warning for TEXT and MYSQL factory if a detector already exist in the current factory
+ - material i/o changes. Changelog updated for upcoming beta3
+
+
+
+
+
+
+
+
+
+
 
 
 
