--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+3/7/16
+ - added time to bst digitized info. bco is a random number between 0 and 255.
+
 3/4/16
  - fixed bst routine
  - added export to PDF button
