--- a/changeLog
+++ b/changeLog
@@ -4,7 +4,8 @@ Changelog for GEMC
 4/7/16
  - resetting option repetition if so directed
    if repe is 1, options can be accumulated from the gcard
-- defaulting SPREAD to phasespace, cos(theta) is flat, not theta, unless flag "flat" is given to the SPREAD option
+ - defaulting SPREAD to phasespace, cos(theta) is flat, not theta, unless flag "flat" is given to the SPREAD option
+ - better comments for SPREAD_P
 
 4/6/16
  - fixed bdx hit process warnings
