--- a/changeLog
+++ b/changeLog
@@ -3,6 +3,7 @@ Changelog for GEMC
 
 4/8/16
  - fixed option repetition bug
+ - NO_FIELD repetitions set to zero
 
 4/7/16
  - resetting option repetition if so directed
